build/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: account
  name: account
spec:
  replicas: 2
  selector:
    matchLabels:
      app: account
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: account
    spec:
      containers:
      - image: dallanbhatti/account:prod
        imagePullPolicy: Always
        name: account
        ports:
        - containerPort: 5000
        resources: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: auth
  name: auth
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: auth
    spec:
      containers:
      - image: dallanbhatti/auth:prod
        imagePullPolicy: Always
        name: auth
        ports:
        - containerPort: 5000
        resources: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: static
  name: static
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: static
    spec:
      containers:
      - image: dallanbhatti/static:prod
        imagePullPolicy: Always
        name: static
        ports:
        - containerPort: 80
        resources: {}
