build/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: account
  name: account
spec:
  ports:
  - port: 50000
    protocol: TCP
    targetPort: 5000
  selector:
    app: account
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: static
  name: static
spec:
  ports:
  - port: 40000
    protocol: TCP
    targetPort: 80
  selector:
    app: static
---
